--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^3.1.0",
     "sanity": "^3.28.0",
     "styled-components": "^6.1.8"
   },
