--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "resend": "^3.1.0",
     "sanity": "^3.28.0",
+    "sharp": "^0.33.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
