--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "Rene Ricardo - Portfolio",
-  "short_name": "renerp",
+  "short_name": "ReneRP.dev",
   "description": "Rene Ricardo's developer portfolio",
   "start_url": ".",
   "icons": [
-    { "src": "/android-chrome-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/android-chrome-512x512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "/icons/android-chrome-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icons/android-chrome-512x512.png", "sizes": "512x512", "type": "image/png" }
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
