--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.11",
+    "@react-hook/mouse-position": "^4.1.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.28.0",
     "next": "14.1.0",
