--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.10.3",
     "framer-motion": "^12.23.24",
+    "lenis": "^1.3.11",
     "next": "^15.5.6",
     "next-sanity": "^11.5.5",
     "react": "^19.2.0",
