feat: add deployment guide, vercel configuration, and build script for optimized deployments

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "vercel-build": "./scripts/vercel-build.sh",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
